# Nodegrams

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_sources.txt  dsse_files.cmake
cmake/: Config.cmake  sourcelist.cmake
include/Dsse/: Config.h  DataTypes.h  DssEngine.h  LuaNode.h  NodeBase.h  NodeContainer.h  SparseArray.h  SparseArrayIterator.h  TypeRegistry.h
include/Dsse/datatypes/: Boolean.h  DataBox.h  DataWriteFunc.h  Double.h  Event.h  Float.h  Int32.h  Int64.h
include/Dsse/inoutlets/: DataHolder.h  FloatInlet.h  FloatOutlet.h  InletBase.h  MultiwayInlet.h  OutletBase.h  SimpleInlet.h  SimpleOutlet.h  SinglewayInlet.h
include/Dsse/nodes/: ContainerNode.h  DynamicNode.h  NodeBase.h  NodeContainer.h  StaticNode.h  TestNode.h
include/Dsse/nodes/logic/gates/: AND.h
include/Dsse/nodes/time/: SysTimeNode.h
include/Nodegrams/: Config.h  DataTypes.h  Deserializer.h  Nodegrams.h  Serializer.h  Serializing.h  SparseArray.h  SparseArrayIterator.h  TypeRegistry.h
include/Nodegrams/datatypes/: Boolean.h  DataBox.h  DataWriteFunc.h  Double.h  Event.h  Float.h  Int32.h  Int64.h
include/Nodegrams/inoutlets/: DataHolder.h  InletBase.h  MultiwayInlet.h  OutletBase.h  SimpleOutlet.h  SinglewayInlet.h
include/Nodegrams/nodes/: ContainerNode.h  DynamicNode.h  NodeBase.h  StaticNode.h  TestNode.h
include/Nodegrams/nodes/logic/gates/: AND.h  ANDGate.h  Gate2i1o.h  ORGate.h  XORGate.h
include/Nodegrams/nodes/time/: SysTimeNode.h
programs/: CMakeLists.txt
programs/TestApp/: TestApp.cpp
src/Dsse/: DssEngine.cpp  TypeRegistry.cpp
src/Dsse/datatypes/: Boolean.cpp  DataBox.cpp  Double.cpp  Event.cpp  Float.cpp  Int32.cpp  Int64.cpp
src/Dsse/inoutlets/: FloatInlet.cpp  FloatOutlet.cpp  InletBase.cpp  MultiwayInlet.cpp  OutletBase.cpp  SimpleInlet.cpp  SimpleOutlet.cpp  SinglewayInlet.cpp
src/Dsse/nodes/: ContainerNode.cpp  DynamicNode.cpp  LuaNode.cpp  NodeBase.cpp  StaticNode.cpp  TestNode.cpp
src/Dsse/nodes/time/: SysTimeNode.cpp
src/Nodegrams/: Nodegrams.cpp  TypeRegistry.cpp
src/Nodegrams/datatypes/: Boolean.cpp  DataBox.cpp  Double.cpp  Event.cpp  Float.cpp  Int32.cpp  Int64.cpp
src/Nodegrams/inoutlets/: InletBase.cpp  MultiwayInlet.cpp  OutletBase.cpp  SimpleOutlet.cpp  SinglewayInlet.cpp
src/Nodegrams/nodes/: ContainerNode.cpp  DynamicNode.cpp  NodeBase.cpp  StaticNode.cpp  TestNode.cpp
src/Nodegrams/nodes/logic/gates/: Gate2i1o.cpp
src/Nodegrams/nodes/time/: SysTimeNode.cpp
